testsuite/tests/typing-layouts-gadt-sort-var/test_extensible.compilers.reference
File "insert_extensible.ml", line 5, characters 58-59:
5 | and packed = Gadt_extensible.Mk ((fun _ -> assert false), g)
                                                              ^
Error: This expression has type t_void -> unit
       but an expression was expected of type 'a -> unit
       t_void has layout void, which is not a sublayout of value.
